# make-agent

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/core/: base_model.py  database.py  error_handler.py  exceptions.py  logging.py  metrics.py  security.py
backend/app/modules/github/: exceptions.py  router.py  service.py
backend/app/modules/github/schemas/: requests.py  responses.py
backend/examples/modules/agent/: exceptions.py  repository.py  router.py  service.py
backend/examples/modules/agent/schemas/: __init__.py  requests.py  (+1 more)
backend/examples/modules/communication/: exceptions.py  repository.py  router.py  service.py
backend/examples/modules/coordinator/: classifier.py  exceptions.py  repository.py  router.py  service.py
backend/examples/modules/delegation/: decomposer.py  exceptions.py  repository.py  router.py  service.py
backend/examples/modules/memory/: exceptions.py  repository.py  router.py  service.py
backend/examples/modules/request/: exceptions.py  router.py  service.py
backend/examples/modules/todo/: exceptions.py  models.py  repository.py  router.py  service.py
backend/examples/tests/: test_communication.py  test_context_optimization.py  test_coordinator.py  test_delegation.py  test_e2e_flow.py  test_e2e_scenario.py  test_request_flow.py  test_todo.py
backend/tests/: conftest.py  test_github.py  test_health.py  test_metrics.py  test_security.py  test_structlog.py
(+88 files in other folders)
